tests/negative/test_cast_data_prim.orb
data Foo {
    x:i32
};

fnc main() () {
    let f:Foo;
    cast i32 f;
};